# NeonBlue

./: .env.example  .gitignore  ASSIGNMENT_COVERAGE_ANALYSIS.md  CLICKHOUSE_DATAGRIP_SETUP.md  CLICKHOUSE_TABLES_OVERVIEW.md  DASHBOARD_NETWORK_FIX.md  DEMO_GUIDE.md  Dockerfile  FUTURE_AI_ENHANCED_ARCHITECTURE.md  PROJECT_ORGANIZATION.md  QUICK_START.md  README.md  README_COMPLETE_ARCHITECTURE.md  SCOPE_BASED_AUTHENTICATION.md  STORED_PROCEDURES_README.md  alembic.ini  architecture_discussion.md  bulk_operations_patterns.md  cdc_architecture_comparison.md  celery_redis_analysis.md  docker-compose.yml  enhanced_architecture_plan.md  migrate_to_stored_procedures.sh  pyproject.toml  requirement_details.md  requirements.txt  run_tests.sh
ai_services/: MCP_REDIS_INTEGRATION.md  __init__.py  requirements-ai.txt
alembic/: env.py
analysis/: RUN_COMPLETE_FLOW_GUIDE.md
app/: __init__.py  main.py
auth/: API_TOKENS_SETUP.md  TOKENS_LOADED_SUCCESS.md  api_tokens.env  api_tokens.sql  generate_api_tokens.py  generated_api_tokens.json  update_tokens.sh
clickhouse/: clickhouse-hot-cold-schema.sql  clickhouse-optimal-schema.sql  recreate_schema_json_each_row.sql  setup_clickhouse_simple.sql
config/: Dockerfile  Dockerfile.mcp  docker-compose-ai.yml  docker-compose.yml  prometheus.yml
debezium/: debezium-connector-config.json
docs/: DATA_MANAGEMENT_STRATEGY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ORGANIZED.md  SETUP_INSTRUCTIONS.md  STORED_PROCEDURES_README.md
examples/: README_CLICKHOUSE_REPORTS.md  demo_stored_procedures.py  demo_usage.py
scripts/: start_services.sh  (+2 more)
(+91 files in other folders)
